# HighPerformanceImageProcessing

./: .editorconfig  settings.gradle
HighPerformanceImageNative/: build.gradle
HighPerformanceImageNative/ImageCrop/: build.gradle
HighPerformanceImageNative/ImageCrop/src/main/res/layout/: ucrop_activity_photobox.xml  ucrop_aspect_ratio.xml  ucrop_fragment_photobox.xml  ucrop_layout_rotate_wheel.xml  ucrop_layout_scale_wheel.xml  ucrop_view.xml
HighPerformanceImageNative/src/androidTest/java/org/phcbest/highperformanceimagenative/: ExampleInstrumentedTest.kt
HighPerformanceImageNative/src/main/cpp/: CMakeLists.txt  highperformanceimagenative.cpp  imageMinPixelSize.cpp  imageMinPixelSize.h  lutFilterImage.cpp  lutFilterImage.h
HighPerformanceImageNative/src/main/java/org/phcbest/highperformanceimagenative/: ImageHelper.kt  NativeLib.kt
HighPerformanceImageNative/src/test/java/org/phcbest/highperformanceimagenative/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/org/phcbest/highperformanceimageprocessing/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/phcbest/highperformanceimageprocessing/: ImageCropActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_encrypy_bitmap.xml  activity_image_crop.xml  activity_lut_filter.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/phcbest/highperformanceimageprocessing/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
